--- a/style.css
+++ b/style.css
@@ -42,6 +42,10 @@ a{
 .flex{
     display: flex;
 }
+
+.grid{
+    display: grid;
+}
 /*Header*/
 
     /*NAV*/
@@ -317,3 +321,98 @@ a{
             line-height: 2.5rem;
         }
 
+        /*#advertisement*/
+        #ad > div{
+            background-color: white;
+            padding: 1rem;
+        }
+
+        #ad > div > div{
+            padding:  5rem 3rem;
+            text-align: center;
+            background-color: rgb(241, 241, 241);
+        }
+
+        /*#tag*/
+        #tag .flex{
+            flex-wrap: wrap;
+            gap: 0.2rem;
+            background-color: white;
+            padding: 2rem 1rem;
+            row-gap: 1rem;
+        }
+
+        #tag .flex li{
+            padding: 0.1rem 0.25rem;
+            background-color: rgb(241, 241, 241);
+        }
+        #tag .flex li:first-child{
+            padding: 0.25rem;
+            background-color: black;
+            color: white;
+        }
+
+        /*#inspiration*/
+        #inspiration > .grid{
+            background-color: white;
+            padding: 1rem;
+            grid-template-columns: 1fr 1fr;
+            gap: 1rem;
+        }
+        #inspiration > .grid > img{
+            width: 100%;
+        }
+
+        /*#follow*/
+        #follow > .flex {
+            padding: 1rem;
+            background-color: white;
+            gap: 1rem;
+        }
+        #follow > .flex > li{
+            font-size: 2rem;
+        }
+        #follow > .flex > li:hover{
+            opacity: 0.5;
+        }
+
+        /*#sub*/
+        #sub > form{
+            background-color: white;
+            padding: 1rem;
+            display: flex;
+            flex-direction: column;
+            row-gap: 1rem;
+        }
+        #sub > form > input{
+            padding: 0.5rem 1rem;
+        }
+        #sub > form > button {
+            background-color: red;
+            color: white;
+            font-size: 1.25rem;
+            padding: 0.25rem 0;
+            border: none;
+        }
+        #sub > form > button:hover{
+            background-color: rgb(204, 204, 204);
+        }
+
+
+footer{
+    display: block;
+    padding: 2rem 1rem;
+    background-color: rgb(97, 97, 97);
+}
+footer > a{
+    display: inline-block;
+    background-color: black;
+    padding: 1rem;
+    color: white;
+    margin-bottom: 2rem;
+   
+}
+
+footer > p > a{
+    text-decoration: underline;
+}
